tests/snapshots/display__biguint64array_data.snap
---
source: tests/display.rs
description: "=== SOURCE ===\nnew BigUint64Array([100000000000n, 1n, 2n, 3n, 4n, 5n, 6n, 7n, 8n])"
---
new BigUint64Array([
  0x174876e800n, 0x01n, 0x02n, 0x03n, 0x04n, 0x05n, 0x06n, 0x07n,
  0x08n,
])
