tests/snapshots/display__float32array_data.snap
---
source: tests/display.rs
description: "=== SOURCE ===\nnew Float64Array([NaN, 1, 2, 3, 4, 5, 6, 7, 8])"
---
new Float64Array([
  NaN, 1, 2, 3, 4, 5, 6, 7,
  8,
])
