tests/snapshots/display__float32array_zeroed.snap
---
source: tests/display.rs
description: "=== SOURCE ===\nnew Float64Array(6)"
---
new Float64Array(6)
