tests/snapshots/display__indirect_uint8array.snap
---
source: tests/display.rs
description: "=== SOURCE ===\nconst buf = new Uint8Array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10]).buffer;\nconst foo = { buf };\n[foo, new Uint8Array(buf)];\n"
---
const v0 = new Uint8Array([
  0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08,
  0x09, 0x0a,
]);
[
  {
    "buf": v0.buffer,
  },
  v0,
]
