tests/snapshots/display__int8array_data.snap
---
source: tests/display.rs
description: "=== SOURCE ===\nnew Int8Array([0, -1, 2, -3])"
---
new Int8Array([
  0x00, -0x01, 0x02, -0x03,
])
